Restore splashscreen support with genfb. genfb patch from Pierre Pronchery, other small changes to make it compile by me.

Closes PR kern/42605.

XXX doesnt work in 8bit, probably a cmap issue